<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fRMpRINCIPALAactivity">

    <ScrollView
        android:layout_width="307dp"
        android:layout_height="630dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/oficiales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fiscal"
                app:srcCompat="@drawable/operativo" />

            <Button
                android:id="@+id/p15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pantallapatrulla"
                android:text="@string/boton1"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="64dp" />

            <Button
                android:id="@+id/p16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pantallaarmas"
                android:text="@string/boton2"
                tools:layout_editor_absoluteX="263dp"
                tools:layout_editor_absoluteY="64dp" />

            <Button
                android:id="@+id/p17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pantallaUniformes"
                android:text="@string/boton3"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="216dp" />

            <Button
                android:id="@+id/p18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pantallaEsposas"
                android:text="@string/boton4"
                tools:layout_editor_absoluteX="251dp"
                tools:layout_editor_absoluteY="204dp" />

            <Button
                android:id="@+id/p19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pantallaplacas"
                android:text="@string/boton5"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="391dp" />

            <Button
                android:id="@+id/p20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pantallasector"
                android:text="@string/boton6"
                tools:layout_editor_absoluteX="263dp"
                tools:layout_editor_absoluteY="384dp" />

            <Button
                android:id="@+id/p21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pantallabotas"
                android:text="@string/boton7"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="571dp" />

            <Button
                android:id="@+id/oper3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pantallaoperativo"
                android:text="@string/boton8"
                tools:layout_editor_absoluteX="254dp"
                tools:layout_editor_absoluteY="576dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>