<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlacasActivity">

    <TextView
        android:id="@+id/titu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/placa"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="204dp"
        android:layout_height="342dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/plac"
                app:srcCompat="@drawable/placa" />

            <TextView
                android:id="@+id/descrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placade" />

            <Button
                android:id="@+id/regreso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="regreso"
                android:text="@string/regreso" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>