<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BotasActivity">

    <TextView
        android:id="@+id/bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bota"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="304dp"
        android:layout_height="610dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bot" />

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="506dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bot">

        <ImageView
            android:id="@+id/botaaa"
            android:layout_width="match_parent"
            android:layout_height="378dp"
            android:contentDescription="@string/botaaaaaa"
            app:srcCompat="@drawable/botas" />

        <TextView
            android:id="@+id/descriiii"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botasdescripcion" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/regreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="regreso"
                android:text="@string/regreso"
                tools:text="@string/regreso" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>