<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UniformesActivity">

    <TextView
        android:id="@+id/uni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/unif"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="302dp"
        android:layout_height="536dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uni"
        app:layout_constraintVertical_bias="0.652">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="557dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2">

        <ImageView
            android:id="@+id/unif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/unifo"
            app:srcCompat="@drawable/uniforme" />

        <TextView
            android:id="@+id/txtuni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtunif" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/regreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="regreso"
                android:text="@string/regreso" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>