<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArmasActivity">

    <TextView
        android:id="@+id/pantallaarmas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pantallaarmas"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="309dp"
        android:layout_height="539dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pantallaarmas">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/arm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pantallaarmas"
                app:srcCompat="@drawable/armas" />

            <TextView
                android:id="@+id/txtarma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arma" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/reg"
        android:layout_width="93dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="4dp"
        android:onClick="regreso"
        android:text="@string/regreso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>