<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patrullaActivity">

    <TextView
        android:id="@+id/titulop"
        android:layout_width="185dp"
        android:layout_height="72dp"
        android:layout_marginTop="28dp"
        android:text="@string/patrulla"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="317dp"
        android:layout_height="368dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulop"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pimage"
                android:layout_width="match_parent"
                android:layout_height="308dp"
                android:contentDescription="@string/patrulla"
                app:srcCompat="@drawable/patrulla" />

            <TextView
                android:id="@+id/txtpo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patrulladescrip"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/regreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="regreso"
                    android:text="@string/regreso" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>